# let4

./: CMakeLists.txt
Headers/: trigrammdictionary.h
Sources/: main.cpp  trigrammdictionary.cpp
Tests/: test.cpp  testCHETURY.txt  testDVA.txt  testTRI.txt
